[gd_scene load_steps=3 format=3 uid="uid://4x1yib3nuvak"]

[ext_resource type="Script" path="res://scene/Weapon/weapon.gd" id="1_60lmo"]
[ext_resource type="PackedScene" uid="uid://crexu586mevdr" path="res://scene/Weapon/Bullet.tscn" id="2_kyxbm"]

[node name="Weapon" type="Node2D"]
script = ExtResource("1_60lmo")
Bullet = ExtResource("2_kyxbm")

[node name="EndOfGun" type="Marker2D" parent="."]
position = Vector2(32, 0)

[node name="GunDirection" type="Marker2D" parent="."]
position = Vector2(80, 0)

[node name="AttackCoolDown" type="Timer" parent="."]
wait_time = 0.7
one_shot = true
